style: Add responsive styling for YouTube videos

--- a/src/brazil_blog/static/css/brazil_blog.css
+++ b/src/brazil_blog/static/css/brazil_blog.css
@@ -9,3 +9,13 @@
 .header-text-color {
     @apply text-[#05154d];
 }
+
+/** Make youtube video responsive */
+.responsive-object {
+    @apply relative;
+}
+
+.responsive-object iframe {
+    @apply w-full h-full absolute top-0 left-0;
+}
+/** End: Make youtube video responsive */
