--- a/src/locations/templates/widgets/map_picker.html
+++ b/src/locations/templates/widgets/map_picker.html
@@ -6,5 +6,5 @@
         </div>
         <button type="button" class="button button-primary" data-button-current-location id="{{ widget.id }}-pick">Current location</button>
     </div>
-    <div id="{{ widget.map_id }}" class="mt-2" style="margin-top: 1rem; width: 100%; height: 400px;"></div>
+    <div id="{{ widget.map_id }}" class="mt-2" style="margin-top: 1rem; width: 100%; height: 400px; z-index: 0;"></div>
 </div>
