feat: Add link to play game in header

--- a/src/brazil_blog/templates/includes/header.html
+++ b/src/brazil_blog/templates/includes/header.html
@@ -82,6 +82,10 @@
                             href="{% url 'account_signup' %}?next={{request.path}}">{% trans "Sign Up" %}</a>
                     </li>
                     {% endif %}
+                    <li class="pl-4 mt-2">
+                        <a class="text-blue-800 hover:text-blue-900 transition-colors"
+                            href="{% url 'frogger' %}" target="_blank">Spelletje spelen 🕹️</a>
+                    </li>
                 </ul>
             </div>
         </div>
