feat: Add favicon link to base template

--- a/src/brazil_blog/templates/base.html
+++ b/src/brazil_blog/templates/base.html
@@ -26,6 +26,9 @@
         {# Global stylesheets #}
         <link rel="stylesheet" type="text/css" href="{% static 'css/brazil_blog_compiled.css' %}">
 
+        {# Favicon #}
+        <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}">
+
         {% block extra_css %}
         {# Override this in templates to add extra stylesheets #}
         {% endblock %}
