--- a/src/brazil_blog/templates/base.html
+++ b/src/brazil_blog/templates/base.html
@@ -46,6 +46,7 @@
     
         {# Global javascript #}
         <script type="text/javascript" src="{% static 'js/brazil_blog.js' %}"></script>
+        <script type="text/javascript" src="{% static 'js/add_drink.js' %}"></script>
     
         {% block extra_js %}
         {# Override this in templates to add extra javascript #}
