--- a/src/blog/templates/blog/blog_page.html
+++ b/src/blog/templates/blog/blog_page.html
@@ -97,7 +97,7 @@
             </div>
 
             <!-- Body -->
-            <div class="flex flex-col p-4 gap-4">
+            <div class="flex flex-col p-4 gap-4 prose max-w-none">
                 <div class="font-light">
                     {{ page.intro }}
                 </div>
