--- a/src/brazil_blog/templates/base.html
+++ b/src/brazil_blog/templates/base.html
@@ -1,4 +1,4 @@
-{% load static wagtailcore_tags wagtailuserbar %}
+{% load static wagtailcore_tags wagtailuserbar wagtailimages_tags %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -28,6 +28,19 @@
 
         {# Favicon #}
         <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}">
+        <link rel="icon" type="image/png" href="{% static 'favicon.png' %}">
+        <link rel="apple-touch-icon" sizes="180x180" href="{% static 'favicon.png' %}">
+
+        {# OG tags & other meta tags / icons #}
+        {% block meta %}
+        <meta property="og:title" content="{% if page.seo_title %}{{ page.seo_title }}{% else %}{{ page.title }}{% endif %}" />
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="{{ request.build_absolute_uri }}" />
+        <meta property="og:description" content="{{ page.search_description }}" />
+        <meta property="og:image" content="{% image page.header_image width-1200 as header_image %}{{ header_image.url }}" />
+        <meta property="og:image:width" content="1200" />
+        <meta property="og:image:height" content="630" />
+        {% endblock %}
 
         {% block extra_css %}
         {# Override this in templates to add extra stylesheets #}
