feat: Add responsive visibility for total drinks consumed and Brazilian time display in header

--- a/src/brazil_blog/templates/includes/header.html
+++ b/src/brazil_blog/templates/includes/header.html
@@ -98,6 +98,11 @@
             </div>
         </div>
     </div>
+    <div class="flex items-center gap-2 px-4 pb-2 sm:hidden">
+        {% include "blog/includes/brazil-time.html" %}
+        {% show_total_drinks_consumed %}
+    </div>
 </header>
+
 
 {% endwith %}
